# SRTtoRIST

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config.json
.github/workflows/: build.yml
init.d/: srt-to-rist-gateway  stream_relay
src/: config.h  config_parser.cpp  config_parser.h  feedback.cpp  feedback.h  input_base.h  main.cpp  network_utils.cpp  network_utils.h  rist_output.cpp  rist_output.h  rtsp_input.cpp  rtsp_input.h  srt_input.cpp  srt_input.h
tests/: parse_config_test.cpp  rtsp_config.json
